--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is going to be my PortFolio</title>
+    <title>This is going to be my PortFolio.</title>
 </head>
 <body>
     <h1>Este es el título atractivo e interesante del post</h1>
